# eslai

./: .gitignore  README  README.md  README.rst  app.py  audio_augmentation.ipynb  eslai.py  pyproject.toml  requirements.txt  scp_spartan.sh
eslai/: README.rst  pyproject.toml
eslai/eslai/: main.py
hpc_scripts/: audio_processing.slurm  classifier_960h.slurm  classifier_wav2vec.slurm  classifier_xlsr.slurm  classifier_xlsr_noisy.slurm  hespi.slurm  noisy_run_group.sh  remove_silence.slurm
hpc_scripts/archived/: classifier.slurm  encoding.slurm  extract.slurm
hpc_scripts/noisy_run/: xlsr_lr_batch16.slurm  xlsr_lr_batch32.slurm  xlsr_lr_batch64.slurm  xlsr_lr_batch8.slurm
modules/: audio_convert.py  whisper.py
notebooks/: audio_data_cleanup.ipynb  audio_encode.ipynb  audio_preprocessing.ipynb  audio_processing.ipynb  common-voice-accent-classification.ipynb  common_accent_replicate.ipynb  prepare_noise.ipynb
notebooks/data/: accent_map.csv  accent_test.tsv  accent_train.tsv  audio_data_test.txt  audio_data_train.txt  indian_accents.tsv  train_clean.csv  train_unzip.csv
notebooks/data/encoding/: cache-19e59db8ae10a5d8.arrow  cache-25cc603c80877d4b.arrow  cache-28523d7ba7a3560d.arrow  cache-380cc7e496c9f30d.arrow  (+3 more)
scripts/: app.py  audio_classifier.py  audio_encode.py  audio_predict.py  audio_processing.py  audio_treatment.py  auplay.py  auplay_sb.py  conver_to_mp3.sh  copy_audio.sh  copy_files.sh  encode.py  extract.slurm  get_labs.py  local_run.sh  preprocess.py  remove_old_files.sh  remove_silence.py  set-interactive-gpu.sh  set-interactive.sh  setup.sh
