[project]
name = "eslai"
version = "0.1.0"
description = "A small tool for training pronunciation audio data"
authors = [
    {name = "Robert Turnbull",email="robert.turnbull.unimelb.edu.au"}
    {name = "James Quang",email = "james.quang@unimelb.edu.au"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.3.0,<3.0.0)",
    "torch (>=2.7.1,<3.0.0)",
    "typer (>=0.16.0,<0.17.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
eslai = "eslai.main:app"
